fixed spacing btn container

--- a/web-frontend/src/pages/programs/create/program.css
+++ b/web-frontend/src/pages/programs/create/program.css
@@ -82,7 +82,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 0 10px;
+    margin: 15px 10px;
   }
 
   .create-prog-page__button-container button {
